--- a/data/estilos_19.css
+++ b/data/estilos_19.css
@@ -551,13 +551,15 @@ rojo flat dark c6002b
 	section.contenedorg{
 	top: 60px;
 	width: 100%;
-	min-height: 105vh;
+	min-height: 100vh;
 
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-
+/*
 	border-bottom: 1px solid #d6d6d6;
+*/
+
 	}
 
 	section.contenedorg1{
@@ -783,7 +785,13 @@ rojo flat dark c6002b
 		width: 250px;
 		display: block;
 		margin: auto;
-		border-radius: 100%
+
+	    position: absolute;
+	    bottom: 0;
+	    top: 0;
+	    left: 0;
+	    right: 0;
+	    border-radius: 100%;
 	}
 	.imagen_foto_c{
 		width: 250px;
@@ -1172,8 +1180,18 @@ rojo flat dark c6002b
 
 		font-family: "HelveticaNeue", Arial;
 
-		background: #fff;
+		/*
+		background-color: #1f87dc;
+    	border-width: 5px 5px 5px 5px;
+	    border-style: solid;
+	    border-color: #1f87dc;
+*/
+
+		background-color: #fff;
 		color: #131724;
+		border-style: solid;
+		border-color: #fff;
+		border-width: 5px 5px 5px 5px;
 		font-weight: 700;
 
 	}
@@ -1197,14 +1215,12 @@ rojo flat dark c6002b
 		width: 35%;
 	    display: flex;
 	    height: 100vh;
-	    background-color: orange;
+	    position: absolute;
 	}
 	div.my_texto{
 		margin: auto;
-		background-color: orange;
 	}
 	div.my_texto:hover{
-		background-color: orange;
 	}
 
 
