--- a/data/prueba.css
+++ b/data/prueba.css
@@ -45,6 +45,41 @@
     */
 }
 
+p.titAngel{
+    font-size: 60px;
+    font-weight: lighter;
+    font-family: "HelveticaNeue", Arial;
+}
+
+b.nAngel{
+    color: #fff;
+    background-color: #1f87dc;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #1f87dc;
+}
+.contenedorSec2{
+    height: 100vh;
+    width: 80%;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    left: 0;
+    text-align: center;
+}
+
+.contenedorSec2 div{
+    position: relative;
+    display: inline-block;
+    width: 45%;
+    height: 100vh;
+    color: #fff;
+    text-align: center;
+
+}
+.subImg{
+    border-radius: 100%;
+}
 
 @keyframes bye{
     0% {opacity: 1}
