--- a/data/estilos_19.css
+++ b/data/estilos_19.css
@@ -1685,6 +1685,20 @@ div .bottom{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 			/**/
 			/**/
 			/* TAMAÑO MOVIL */
@@ -1799,12 +1813,23 @@ div .bottom{
 
 				p.texto_cuadro{
 					text-align: justify;
-					margin-left: 60px;
-					margin-right: 60px;
+					margin-left: 55px;
+					margin-right: 55px;
 					font-size: 1.1em;
-					color: #636262;
+					color: #fff;
 					line-height: 19px;
 				}
+
+				p.texto_cuadro_2{
+					text-align: justify;
+					margin-left: 55px;
+					margin-right: 55px;
+					font-size: 1.1em;
+					color: #222;
+					line-height: 19px;
+				}
+
+
 
 				section.texto_marco{
 					float: right;
@@ -1814,6 +1839,15 @@ div .bottom{
 					background-color: transparent;
 					margin-bottom: 0px;
 				}
+				section.texto_marco_2{
+					float: right;
+					width: 100%;
+					color: #818181;
+					min-height: 200px;
+					background-color: transparent;
+					margin-bottom: 0px;
+				}
+
 
 
 				section.texto_marco:hover{
@@ -1826,11 +1860,49 @@ div .bottom{
 					transition: 0.7s;
 
 				}
+
 				section.texto_marco:hover p.titulo{
 					color: #fff;
 					transition: 0.7s;
 
 				}
+
+				section.texto_marco_2 p.titulo_2{
+					color: #222;
+
+					font-size: 35px;
+					margin-top: 30px;
+					margin-bottom: 15px;
+
+					font-weight: lighter;
+    				font-family: "HelveticaNeue", Arial;
+
+				}
+
+				.divSec3{
+					margin-top: 40px;
+					margin-bottom: 15px;
+				}
+				p.cambiaSec3{
+					margin: auto;
+				    text-align: center;
+				    position: absolute;
+				    height: 30px;
+				    width: 100%;
+				    /* display: flex; */
+				    font-size: 1.9em;
+				    color: #131724;
+				}
+
+				section.texto_marco p.titulo{
+					color: #fff;
+
+					font-size: 50px;
+					margin-top: 50px;
+					margin-bottom: 35px;
+
+				}
+
 
 
 				section.texto_marco li{
@@ -1867,6 +1939,10 @@ div .bottom{
 					background-color: transparent;
 				}
 
+			.imagen_foto_c{
+				width: 200px;
+				min-height: 90px;
+			}
 
 			section.texto{
 				float: right;
@@ -2041,9 +2117,9 @@ div .bottom{
 				p.titulo_footer{
 					text-align: center;
 					margin-top: 25px;
-					margin-bottom: 0px;
+					margin-bottom: 15px;
 					font-size: 1.8em;
-					color: #131724;
+					color: #fff;
 				}
 
 				p.texto{
