--- a/data/prueba.css
+++ b/data/prueba.css
@@ -35,6 +35,10 @@
     border-style: solid;
     border-color: #1f87dc;
     color: #fff;
+
+    font-size: 40px;
+    font-weight: 300;
+
     /*
     color: #131724;
     border-width: 5px 5px 5px 5px;
