--- a/data/copia/Ángel Tepetla _ Ingeniero Mecatrónico_files/estilos_19.css
+++ b/data/copia/Ángel Tepetla _ Ingeniero Mecatrónico_files/estilos_19.css
@@ -573,26 +573,9 @@ rojo flat dark c6002b
 
 	border-bottom: 1px solid #d6d6d6;
 	}
-
-	section#contSep{
-
-		background-image: url(img2.jpg);
-	    /* background-attachment: fixed; */
-	    background-size: cover;
-	    background-position: left;
-	    /* background-size: auto; */
-
-	}
-	section.separador{
-		min-height: 150px !important;
-	}
-
-
-
 	section.contA{
 		min-height: 200px;
 	}
-
 	section#cont2:hover{
 		background-color: #131724;
 		transition-duration: 1s;
@@ -718,7 +701,7 @@ rojo flat dark c6002b
 
 	section.texto{
 		float: right;
-		width: 100%;
+		width: 75%;
 		height: 100%;
 		min-height: 400px;
 
@@ -838,12 +821,8 @@ rojo flat dark c6002b
 		text-align: justify;
 		margin-left: 0px;
 		margin-right: 12%;
-		margin-left: 12%;
-
 		font-size: 1.2em;
-		font-family: "HelveticaNeue", Arial;
-
-		color: #303030;
+		color: #eeeeee;
 		line-height: 30px;
 		transition: 0.7s;
 	}
@@ -1809,32 +1788,19 @@ div .bottom{
 			}
 
 			section#cont2{
-				background-image: url('back1.jpg');
+				background-image: none;
 				background-attachment: fixed;
 				background-size: 100%;
 				background-position: left;
 				background-size: auto;
 
 			}
-
-			section#contSep{
-				background-image: url('back1.jpg');
-				background-attachment: fixed;
-				background-size: 100%;
-				background-position: left;
-				background-size: auto;
-
-			}
-
-
-
 			section#contg{
 				background-image: url('musical.jpg');
 				background-attachment: fixed;
 				background-size: 100%;
 				background-position: top;
 
-				height: 100vh;
 				background-size: cover;
 
 			}
