--- a/data/copia/Ángel Tepetla _ Ingeniero Mecatrónico_files/prueba.css
+++ b/data/copia/Ángel Tepetla _ Ingeniero Mecatrónico_files/prueba.css
@@ -50,7 +50,7 @@
 }
 
 p.titAngel{
-    font-size: 40px;
+    font-size: 60px;
     font-weight: lighter;
     font-family: "HelveticaNeue", Arial;
 }
@@ -96,7 +96,7 @@ b.nAngel{
     z-index: 50;
     visibility: visible;
     background-color: #fff;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
 /*
     animation-name: bye;
@@ -108,8 +108,8 @@ b.nAngel{
 }
 
 .primero{
-    height: 100vh;
-    width: 100%;
+    height: 100vw;
+    width: 100vw;
     position: absolute;
     background-color: #131724;
 }
