--- a/data/estilos_19.css
+++ b/data/estilos_19.css
@@ -881,7 +881,7 @@ rojo flat dark c6002b
 	section.texto_marco_2{
 		float: right;
 		width: 65%;
-		height: 100%;
+		/*height: 100%;*/
 		color: #818181;
 		min-height: 200px;
 		background-color: transparent;
@@ -915,7 +915,24 @@ rojo flat dark c6002b
 
 	}
 
+	.section_QuieroSer{
+		min-height: 400px;
+		display: inline-flex;
+	}
+	.texto_QuieroSer{
+		display: inline-flex;
+	}
+	.img_QuieroSer{
+		float: left;
+		display: inline-flex;
+	}
 
+	.loop_marcas{
+		min-height: 300px;
+	    display: grid;
+	    /* width: 100vw; */
+	    background-color: white;
+	}
 
 
 
@@ -1232,7 +1249,7 @@ rojo flat dark c6002b
 
 	}
 
-	span#tipo_yo{
+	span#Soy_Footer{
 		font-weight: bold;
 		background-color: #1d87dc;
 		padding: : 0px 3px;
@@ -1274,7 +1291,7 @@ rojo flat dark c6002b
 	div.my_imagen_2{
 		width: 35%;
 	    display: flex;
-	    height: 100vh;
+	    /*height: 100vh;*/
 	    background-color: white;
 	}
 	div.my_texto_2{
@@ -2713,8 +2730,110 @@ blue dark 131724
 	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
 }
 .social-icon5:hover {
-	background: #1d88dc;
+	background: #0091ea;
 	color: #fff;
 }
 
+
+
+.social-icon_WA {
+	display: inline-block;
+	width: 56px;
+	height: 56px;
+	line-height: 55px;
+	font-size: 35px;
+	color: #131724;
+	background: #fff;
+	border-radius: 100%;
+	box-shadow: 0 4px 12px rgba(0,0,0,.15);
+	margin: 0 4px;
+	text-align: center;
+}
+.social-icon_WA:hover {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.footer .social-icon_WA {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.social-icon_WA:hover {
+	background: #00E676;
+	color: #fff;
+}
+
+
+
+.social-icon_IN {
+	display: inline-block;
+	width: 56px;
+	height: 56px;
+	line-height: 55px;
+	font-size: 35px;
+	color: #131724;
+	background: #fff;
+	border-radius: 100%;
+	box-shadow: 0 4px 12px rgba(0,0,0,.15);
+	margin: 0 4px;
+	text-align: center;
+}
+.social-icon_IN:hover {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.footer .social-icon_IN {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.social-icon_IN:hover {
+	background: #0277bd;
+	color: #fff;
+}
+
+
+
+.social-icon_GM {
+	display: inline-block;
+	width: 56px;
+	height: 56px;
+	line-height: 55px;
+	font-size: 35px;
+	color: #131724;
+	background: #fff;
+	border-radius: 100%;
+	box-shadow: 0 4px 12px rgba(0,0,0,.15);
+	margin: 0 4px;
+	text-align: center;
+}
+.social-icon_GM:hover {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.footer .social-icon_GM {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.social-icon_GM:hover {
+	background: #E53935;
+	color: #fff;
+}
+
+
+.social-icon_Phone {
+	display: inline-block;
+	width: 56px;
+	height: 56px;
+	line-height: 55px;
+	font-size: 35px;
+	color: #131724;
+	background: #fff;
+	border-radius: 100%;
+	box-shadow: 0 4px 12px rgba(0,0,0,.15);
+	margin: 0 4px;
+	text-align: center;
+}
+.social-icon_Phone:hover {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.footer .social-icon_Phone {
+	box-shadow: 0 4px 12px rgba(0,0,0,.13), 0 6px 10px rgba(0,0,0,.3);
+}
+.social-icon_Phone:hover {
+	background: #0091ea;
+	color: #fff;
+}
 
