--- a/data/prueba.css
+++ b/data/prueba.css
@@ -63,26 +63,116 @@ b.nAngel{
     border-color: #1f87dc;
 }
 .contenedorSec2{
-    height: 100vh;
-    width: 80%;
-    margin: auto;
-    position: absolute;
-    right: 0;
-    left: 0;
-    text-align: center;
+    /* margin: auto; */
+    /* position: absolute; */
+    /* right: 0; */
+    /* width: 100vw; */
+    width: 100%;
+    height: 100%;
+    /* left: 0; */
+    /* text-align: center; */
+    display: inline-flex;
 }
 
 .contenedorSec2 div{
-    position: relative;
-    display: inline-block;
-    width: 45%;
-    height: 100vh;
+    display: flex;
+    width: 25%;
+    height: 100%;
+    /* top: 0; */
+    /* bottom: 0; */
+    /* height: 100%; */
     color: #fff;
     text-align: center;
+}
+.contenedorSec2 img{
+    margin: auto;
+    vertical-align: middle;
+    display: inline-block;
 
+    height: 160px;
 }
 .subImg{
-    border-radius: 100%;
+    border-radius: 30%;
+}
+
+.img_loop_1:hover .hover_img_loop_1{
+   transition-duration: 0.4s;
+
+   visibility: visible;
+   width: 15.1vw;
+
+   margin-top: 30vh;
+   margin-left: 5vw;
+   font-size: 1.1em;
+   background-color: black;
+   color: #fff;
+   text-align: center;
+   border-radius: 6px;
+   padding: 0.7vw 0.4vw 0.7vw 0.4vw;
+   z-index: 100;
+}
+
+.img_loop_2:hover .hover_img_loop_2{
+   transition-duration: 0.4s;
+
+   visibility: visible;
+   width: 15.1vw;
+
+   margin-top: 30vh;
+   margin-left: 5vw;
+   font-size: 1.1em;
+   background-color: black;
+   color: #fff;
+   text-align: center;
+   border-radius: 6px;
+   padding: 0.7vw 0.4vw 0.7vw 0.4vw;
+   z-index: 100;
+}
+.img_loop_3:hover .hover_img_loop_3{
+   transition-duration: 0.4s;
+
+   visibility: visible;
+   width: 15.1vw;
+
+   margin-top: 30vh;
+   margin-left: 5vw;
+   font-size: 1.1em;
+   background-color: black;
+   color: #fff;
+   text-align: center;
+   border-radius: 6px;
+   padding: 0.7vw 0.4vw 0.7vw 0.4vw;
+   z-index: 100;
+}
+
+.img_loop_4:hover .hover_img_loop_4{
+   transition-duration: 0.4s;
+
+   visibility: visible;
+   width: 15.1vw;
+
+   margin-top: 30vh;
+   margin-left: 5vw;
+   font-size: 1.1em;
+   background-color: black;
+   color: #fff;
+   text-align: center;
+   border-radius: 6px;
+   padding: 0.7vw 0.4vw 0.7vw 0.4vw;
+   z-index: 100;
+}
+
+
+.contenedorSec2 span{
+   z-index: -1;
+   /* height: 10px; */
+   /*background-color: blue;*/
+   width: 15vw;
+   margin: auto;
+   margin-left: 5vw;
+   display: inline-block;
+   text-align: center;
+   position: absolute;
 }
 
 @keyframes bye{
