--- a/data/estilos_19.css
+++ b/data/estilos_19.css
@@ -720,7 +720,7 @@ rojo flat dark c6002b
 		float: right;
 		width: 100%;
 		height: 100%;
-		min-height: 400px;
+		min-height: 360px;
 
 		background-color: white;
 	}
@@ -929,7 +929,7 @@ rojo flat dark c6002b
 
 	.loop_marcas{
 		min-height: 300px;
-	    display: grid;
+	    /*display: grid;*/
 	    /* width: 100vw; */
 	    background-color: white;
 	}
