--- a/data/prueba.css
+++ b/data/prueba.css
@@ -62,6 +62,33 @@ b.nAngel{
     border-width: 5px;
     border-color: #1f87dc;
 }
+
+.loop_marcas{
+   position: relative;
+   overflow: hidden;
+   /*background-color: blue;*/
+}
+.contenedor_Sec_Marcas_01{
+   /*position: absolute; */
+   height: 100%;
+   width: 100%;
+   top: 0;
+   bottom: 0;
+   display: inline-flex;
+   z-index: 5;
+}
+.contenedor_Sec_Marcas_02{
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   top: 0;
+   bottom: 0;
+   display: inline-flex;
+   z-index: 7;
+}
+.hover_img{
+   color: #fff;
+}
 .contenedorSec2{
     /* margin: auto; */
     /* position: absolute; */
@@ -74,7 +101,7 @@ b.nAngel{
     display: inline-flex;
 }
 
-.contenedorSec2 div{
+.contenedor_Sec_Marcas_01 div{
     display: flex;
     width: 25%;
     height: 100%;
@@ -84,16 +111,71 @@ b.nAngel{
     color: #fff;
     text-align: center;
 }
-.contenedorSec2 img{
+.contenedor_Sec_Marcas_01 img{
+   /*
     margin: auto;
     vertical-align: middle;
     display: inline-block;
 
-    height: 160px;
+   height: 160px;*/
+   text-align: center;
+   position: absolute;
+   margin: auto;
+   top: 0;
+   bottom: 0;
+}
+
+.contenedor_Sec_Marcas_02 div{
+
+   background-color: white;
+   display: flex;
+   width: 25%;
+   height: 100%;
+   /* top: 0; */
+   /* bottom: 0; */
+   /* height: 100%; */
+   color: #fff;
+   text-align: center;
+}
+.contenedor_Sec_Marcas_02 img{
+   /*
+    margin: auto;
+    vertical-align: middle;
+    display: inline-block;
+
+   height: 160px;*/
+   text-align: center;
+   position: absolute;
+   margin: auto;
+   top: 0;
+   bottom: 0;
+}
+
+.img_div_Marcas_01{
+   justify-content: center;
+   margin: 0 auto;
+   height: 100%;
+   overflow: hidden;
 }
 .subImg{
     border-radius: 30%;
+    height: 130px;
+    width: 130px;
 }
+
+.img_div_Marcas_02{
+   justify-content: center;
+   margin: 0 auto;
+   height: 100%;
+   overflow: hidden;
+}
+.subImg_02{
+    /*border-radius: 30%;*/
+    /*height: 160px;*/
+    width: 190px;
+}
+
+
 
 .img_loop_1:hover .hover_img_loop_1{
    transition-duration: 0.4s;
@@ -174,6 +256,152 @@ b.nAngel{
    text-align: center;
    position: absolute;
 }
+
+
+/*
+   Slider Marcas
+*/
+.slider_marcas{
+   width: 100%;
+   height: 150px;
+   display: grid;
+   margin: auto;
+   overflow: hidden;
+}
+.slider_marcas ul{
+   display: flex;
+   padding: 0;
+   width: 400%;
+   overflow: hidden;
+
+   animation: cambio 6s infinite;
+   animation-direction: alternate;
+   animation-timing-function: ease-in-out;
+
+
+}
+.slider_marcas li{
+   /*width: 8.25%;*/
+   width: 33vw;
+   list-style: none;
+   display: flex;
+   overflow: hidden;
+}
+.slider_marcas li:hover{
+   /*width: 8.25%;*/
+   width: 33vw;
+   list-style: none;
+   display: flex;
+   background-color: white;
+}
+
+.slider_marcas img{
+   width: 120px;
+   margin: auto;
+   top: 0;
+   bottom: 0;
+   overflow: hidden;
+}
+.img_redonda{
+   border-radius: 6px;
+}
+
+@keyframes cambio{
+   0% {margin-left: 0;}
+   45% {margin-left: 0;}
+
+   55% {margin-left: -100%;}
+   100% {margin-left: -100%;}
+}
+
+
+.slider_marcas ul{
+   display: flex;
+   padding: 0;
+   width: 400%;
+   overflow: hidden;
+
+   animation: cambio 6s infinite;
+   animation-direction: alternate;
+   animation-timing-function: ease-in-out;
+
+
+}
+.slider_marcas li{
+   /*width: 8.25%;*/
+   width: 33vw;
+   list-style: none;
+   display: flex;
+   overflow: hidden;
+}
+.slider_marcas li:hover{
+   /*width: 8.25%;*/
+   width: 33vw;
+   list-style: none;
+   display: flex;
+   background-color: white;
+}
+
+.slider_marcas img{
+   width: 120px;
+   margin: auto;
+   top: 0;
+   bottom: 0;
+   overflow: hidden;
+}
+.img_redonda{
+   border-radius: 6px;
+}
+
+.hover_img{
+   position: absolute;
+   overflow: hidden;
+   background-color: transparent;
+   margin-left: 9vw;
+   color: transparent;
+}
+.img_loop_1:hover .hover_img_loop_1{
+   transition-duration: 0.4s;
+
+   visibility: visible;
+   width: 15.1vw;
+
+   margin-top: 17vh;
+   margin-left: 9vw;
+   font-size: 1.1em;
+   background-color: black;
+   color: #fff;
+   text-align: center;
+   border-radius: 6px;
+   padding: 0.7vw 0.4vw 0.7vw 0.4vw;
+   z-index: 100;
+}
+
+
+
+/*
+   Tamaño logos marcas
+*/
+.logo_cmt{
+   width: 115px !important;
+}
+.logo_upt{
+   width: 170px !important;
+}
+.logo_ipsei{
+   width: 145px !important;
+}
+.logo_mb{
+   width: 190px !important;
+}
+.logo_nikan{
+   width: 175px !important;
+}
+.logo_egal{
+   width: 175px !important;
+}
+
+
 
 @keyframes bye{
     0% {opacity: 1}
