--- a/data/prueba.css
+++ b/data/prueba.css
@@ -501,3 +501,190 @@ b.nAngel{
     transform: translateY(-40px);
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+      /**/
+      /**/
+      /* TAMAÑO MOVIL */
+      /**/
+      @media only screen and (max-width: 969px){
+
+         .namy{
+            background-color: #1f87dc;
+            border-width: 5px 5px 5px 5px;
+            border-style: solid;
+            border-color: #1f87dc;
+            color: #fff;
+            font-size: 7.5vw;
+            font-weight: 300;
+         }
+
+
+      }
+      p.titAngel{
+         font-size: 9vw;
+         font-weight: lighter;
+         font-family: "HelveticaNeue", Arial;
+      }
+
+      b.nAngel{
+         color: #fff;
+         background-color: #1f87dc;
+         border-style: solid;
+         border-width: 5px;
+         border-color: #1f87dc;
+      }
+
+      .slider_marcas ul{
+         display: flex;
+         padding: 0;
+         width: 400%;
+         overflow: hidden;
+
+         animation: cambio 6s infinite;
+         animation-direction: alternate;
+         animation-timing-function: ease-in-out;
+
+
+      }
+      .slider_marcas li{
+         /*width: 8.25%;*/
+         width: 33vw;
+         list-style: none;
+         display: flex;
+         overflow: hidden;
+      }
+      .slider_marcas li:hover{
+         /*width: 8.25%;*/
+         width: 33vw;
+         list-style: none;
+         display: flex;
+         background-color: white;
+      }
+
+      .slider_marcas img{
+         width: 20vw;
+         margin: auto;
+         top: 0;
+         bottom: 0;
+         overflow: hidden;
+      }
+      .img_redonda{
+         border-radius: 6px;
+      }
+
+      .hover_img{
+         position: absolute;
+         overflow: hidden;
+         background-color: transparent;
+         margin-left: 9vw;
+         color: transparent;
+      }
+      .img_loop_1:hover .hover_img_loop_1{
+         transition-duration: 0.4s;
+
+         visibility: visible;
+         width: 15.1vw;
+
+         margin-top: 17vh;
+         margin-left: 9vw;
+         font-size: 1.1em;
+         background-color: black;
+         color: #fff;
+         text-align: center;
+         border-radius: 6px;
+         padding: 0.7vw 0.4vw 0.7vw 0.4vw;
+         z-index: 100;
+      }
+
+
+
+      /*
+         Tamaño logos marcas
+      */
+      .logo_cmt{
+         width: 25vw !important;
+      }
+      .logo_ipsei{
+         width: 25vw !important;
+      }
+      .logo_upt{
+         width: 27vw !important;
+      }
+      .logo_nikan{
+         width: 26vw !important;
+      }
+      .logo_mb{
+         width: 29vw !important;
+      }
+      .logo_egal{
+         width: 29vw !important;
+      }
+
+
+
+      @keyframes bye{
+          0% {opacity: 1}
+          50% {opacity: 0.5}
+          100% {opacity: 0}
+      }
+
+      .firmaCover{
+          position: relative;
+          z-index: 50;
+          visibility: visible;
+          background-color: #fff;
+          width: 100%;
+          height: 100vh;
+      /*
+          animation-name: bye;
+          animation-duration: 0.6s;
+          animation-delay: 1.6s;
+          animation-iteration-count: 1;
+      */
+
+      }
+
+      .primero{
+          height: 100vh;
+          width: 100%;
+          position: absolute;
+          background-color: #131724;
+      }
+
+      .imagen_firma{
+          width: 300px;
+          margin: auto;
+          position: absolute;
+          /* display: inline-block; */
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          /* vertical-align: middle; */
+          /*height: 200px;*/
+      }
+
+      span#Soy_Footer{
+         font-weight: bold;
+         background-color: #1d87dc;
+         padding: 0px 2x;
+      }
+
+
+
+
+
+
+
