--- a/data/estilos_19.css
+++ b/data/estilos_19.css
@@ -841,7 +841,7 @@ rojo flat dark c6002b
 		margin-left: 12%;
 
 		font-size: 1.2em;
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 
 		color: #303030;
 		line-height: 30px;
@@ -1156,7 +1156,7 @@ rojo flat dark c6002b
 		text-align: center;
 		color: #fff;
 		margin-top: 0vh;
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 
 	}
 
@@ -1176,7 +1176,7 @@ rojo flat dark c6002b
 		background-color: transparent;
 		font-size: 55px;
 		color: #fff;
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 
 	}
 
@@ -1186,7 +1186,7 @@ rojo flat dark c6002b
 		text-align: center;
 		font-size: 25px;
 		color: #fff;
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 
 	}
 
@@ -1211,12 +1211,12 @@ rojo flat dark c6002b
 		font-size: 55px;
 		line-height: 120%;
 		color: #fff;
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 	}
 
 	.spann{
 
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 
 		/*
 		background-color: #1f87dc;
@@ -1238,7 +1238,7 @@ rojo flat dark c6002b
 
 	.spann_light{
 
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 
 		background-color: #fff;
 		color: #131724;
@@ -1266,7 +1266,7 @@ rojo flat dark c6002b
 		font-size: 60px;
 		line-height: 120%;
 		color: #fff;
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 	}
 
 	section#text1.textog1{
@@ -1315,7 +1315,7 @@ rojo flat dark c6002b
 
 	.spanng1{
 
-		font-family: "HelveticaNeue", Arial;
+		/*font-family: "HelveticaNeue", Arial;*/
 
 		background: #fff;
 		color: #131724;
@@ -1952,7 +1952,7 @@ div .bottom{
 					margin-bottom: 15px;
 
 					font-weight: lighter;
-    				font-family: "HelveticaNeue", Arial;
+    				/*font-family: "HelveticaNeue", Arial;*/
 
 				}
 
@@ -2201,12 +2201,12 @@ div .bottom{
 					line-height: 7.5vh;
 
 					color: #fff;
-					font-family: "HelveticaNeue", Arial;
+					/*font-family: "HelveticaNeue", Arial;*/
 				}
 
 				.spann{
 
-					font-family: "HelveticaNeue", Arial;
+					/*font-family: "HelveticaNeue", Arial;*/
 				    background-color: #1f87dc;
 				    color: #ffffff;
 				    font-weight: 600;
@@ -2225,12 +2225,12 @@ div .bottom{
 					background-color: transparent;
 					line-height: 120%;
 					color: #fff;
-					font-family: "HelveticaNeue", Arial;
+					/*font-family: "HelveticaNeue", Arial;*/
 				}
 
 				.spanng1{
 
-					font-family: "HelveticaNeue", Arial;
+					/*font-family: "HelveticaNeue", Arial;*/
 
 					background: #fff;
 					color: #131724;
