--- a/data/estilos_test.css
+++ b/data/estilos_test.css
@@ -551,7 +551,7 @@ section#texto_inicial
     /* top: 50vh; */
     /* top: 0; */
     /* bottom: 0; */
-    padding: 0 9em;
+    padding: 0 15vw;
     vertical-align: middle;
     /* justify-content: center; */
     text-align: center;
